--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,21 @@
     </dependency>
 
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
 
   <build>
     <finalName>jpa-specialist-training</finalName>
