--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
   <artifactId>jpa-specialist-training</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <java.version>17</java.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -16,7 +20,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.16</version>
+      <version>8.0.33</version>
     </dependency>
 
     <dependency>
