--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 
     <dependency>
       <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-hikaricp</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-jpamodelgen</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
