Second Level Cache - SharedCacheMode ALL

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
       <version>5.9.3</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-testing</artifactId>
+      <version>${hibernate.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
